--- a/css/foundation.css
+++ b/css/foundation.css
@@ -7,6 +7,7 @@
 	font-family: "RobotoRegular";
 	src: url("../fonts/Roboto-Regular.ttf") format("truetype");
 }
+
 @font-face {
 	font-family: "RobotoBold";
 	src: url("../fonts/Roboto-Bold.ttf") format("truetype");
@@ -31,15 +32,33 @@
 	box-sizing: border-box;
 }
 
+.safari h1,
+.safari h2,
+.safari h3,
+.safari h4,
+.safari h5,
+.safari h6 {
+	font-weight: 550;
+}
+
+.safari strong {
+	font-weight: 550;
+}
+
+.safari th {
+	font-weight: 550;
+}
+
+
 html,
 body {
 	/* background: #333333; */
 	/* background: var(--blue); */
-	background: rgb(0,0,0);
-	background: -moz-linear-gradient(2deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 35%, rgba(0,0,0,1) 100%);
-	background: -webkit-linear-gradient(2deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 35%, rgba(0,0,0,1) 100%);
-	background: linear-gradient(2deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 35%, rgba(0,0,0,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+	background: rgb(0, 0, 0);
+	background: -moz-linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%);
+	background: -webkit-linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%);
+	background: linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#000000", GradientType=1);
 	color: var(--white);
 	height: fit-content;
 	width: 100%;
@@ -60,6 +79,7 @@ h6 {
 p {
 	letter-spacing: .03em;
 }
+
 strong {
 	font-family: "RobotoBold", "RobotoRegular", sans-serif;
 }
@@ -79,6 +99,7 @@ pre.language-js {
 	border-radius: .2em;
 	/* padding: 1em 0; */
 }
+
 .language-js:first-child {
 	font-size: .8em;
 }
@@ -90,11 +111,13 @@ pre.language-js {
 	-moz-user-select: none;
 	-webkit-user-select: none;
 }
+
 .clickable:hover {
 	cursor: default;
 	text-decoration: underline;
 	color: var(--white);
 }
+
 a.clickable:hover {
 	/* only links should have pointer */
 	cursor: pointer;
@@ -103,6 +126,7 @@ a.clickable:hover {
 .flex {
 	display: flex;
 }
+
 .align-items-center {
 	align-items: center;
 }
@@ -137,6 +161,7 @@ blockquote {
 	justify-content: space-between;
 	border-bottom: .1em solid var(--dark-gray);
 }
+
 #main-navigation h1 a {
 	color: var(--white);
 }
@@ -223,6 +248,14 @@ blockquote {
 }
 
 @media screen and (max-width: 1100px) {
+	#header-logo {
+		font-size: .7em;
+	}
+
+	html {
+		font-size: 1.1em;
+	}
+
 	#container {
 		width: 80%;
 	}
