--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,11 @@
 }
 
 
+@media screen and (max-width: 1100px) {
+	#container {
+		width: 90%;
+	}
+}
 
 @media screen and (max-width: 750px) {
 	.post {
