--- a/css/foundation.css
+++ b/css/foundation.css
@@ -94,13 +94,13 @@ a:hover {
 }
 
 
-pre.language-js {
+pre[class*="language-"] {
 	border: .2em solid var(--dark-gray);
 	border-radius: .2em;
 	/* padding: 1em 0; */
 }
 
-.language-js:first-child {
+[class*="language-"]:first-child {
 	font-size: .8em;
 }
 
@@ -249,11 +249,7 @@ blockquote {
 
 @media screen and (max-width: 1100px) {
 	#header-logo {
-		font-size: .7em;
-	}
-
-	html {
-		font-size: 1.1em;
+		font-size: .9em;
 	}
 
 	#container {
@@ -270,5 +266,15 @@ blockquote {
 @media screen and (max-width: 560px) {
 	.month {
 		width: 100%;
+	}
+	#main-navigation {
+		font-size: .8em;
+	}
+	.month {
+		padding: 2em 1em !important;
+	}
+	.post {
+		margin-right: 0 !important;
+		margin-left: 0 !important;
 	}
 }
