--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,54 @@
+h2 {
+    width: 100%;
+    background: black;
+    padding: .5em 1em;
+    margin-bottom: .5em;
+    border: .1em solid var(--dark-gray);
+    font-family: "RobotoRegular", sans-serif !important;
+}
+
+.projects-container {
+    display: flex;
+
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 2em;
+    align-content: stretch;
+    gap: 1em;
+}
+
+.project {
+
+    box-shadow: 0 4px 6px rgb(255 255 255 / 10%);
+    display: flex;
+    height: fit-content;
+    width: 32%;
+    flex-direction: column;
+    border: .1em solid var(--medium-gray);
+    border-radius: .2em;
+
+}
+.project-title {
+    padding: 2em;
+    text-align: center;
+}
+.project a {
+    width: 100%;
+    text-align: center;
+}
+.project-image {
+    padding: 2em;
+    width: 80%;
+}
+.project-body {
+    background: var(--dark-gray);
+    padding: 1em;
+    box-shadow: inset 0px 5px 17px 3px #303030;
+}
+.project:hover a, .project:hover .project-title {
+    box-shadow: inset 0px 5px 1em #303030;
+}
+
 #content a {
     color: var(--medium-gray);
 }
@@ -53,3 +104,15 @@ tbody tr a::after {
     font-size: .5em;
 }
 
+@media screen and (max-width: 1000px) {
+
+    .projects-container {
+        flex-direction: column;
+    }
+    .project {
+        width: 100%;
+    }
+    .project-image {
+        width: 50%;
+    }
+}
