--- a/css/formatting.css
+++ b/css/formatting.css
@@ -1,3 +1,7 @@
+strong {
+    color: var(--light-gray);
+}
+
 blockquote {
     margin: 1em 0 1em 2em;
     background: var(--medium-gray);
@@ -7,6 +11,7 @@ blockquote {
     border: .3em solid var(--dark-gray);
     font-size: .9em;
 }
+
 .output blockquote p {
     color: black;
 }
@@ -44,6 +49,9 @@ blockquote {
     padding: revert;
 }
 
+.output q {
+    color: white;
+}
 
 @media screen and (max-width: 1100px) {
     blockquote {
