--- a/css/foundation.css
+++ b/css/foundation.css
@@ -63,6 +63,7 @@ body {
 	height: fit-content;
 	width: 100%;
 	font-family: "RobotoRegular", sans-serif;
+	scroll-behavior: smooth;
 }
 
 /* button.tag to reduce collision
