--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,6 @@
 	background: black;
 	padding: 2em;
 	/* background: linear-gradient(1deg, #000000, #000000b0, #0000008c); */
-	position: sticky;
-	top: 0;
 }
 
 .month-header {
@@ -18,6 +16,9 @@
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 1em;
+	position: sticky; 
+	top: 0;
+	padding: 1em 0;
 }
 .month-header-metadata {
 	/* replace for html elements <br/> or display: block */
