--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@
 	position: sticky; 
 	top: 0;
 	padding: 1em 0;
+	background: black;
 }
 .month-header-metadata {
 	/* replace for html elements <br/> or display: block */
@@ -58,6 +59,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+
+	position: relative;
 }
 .post:hover {
 	background: #181818;
@@ -71,6 +74,28 @@
 .post-desc {
 	padding: .5em 0;
 	font-size: .95em;
+}
+
+.draft .dimmer {
+	width: 100%;
+	height: 100%;
+	background: black;
+	opacity: .8;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.draft {
+	/* opacity: .5; */
+	user-select: none;
+	pointer-events: none;
+}
+.draft-container {
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(50%, -50%) rotate(-45deg);
+	font-size: 2em;
 }
 
 
