--- a/css/post.css
+++ b/css/post.css
@@ -11,6 +11,7 @@
 #post-header {
     background: black;
     padding: 2em;
+    border-right: .1em solid var(--dark-gray);
 }
 #post-metadata {
     position: sticky;
@@ -56,6 +57,8 @@
     }
     #post-header {
         width: 100%;
+        border: none;
+        border-bottom: .1em solid var(--dark-gray);
     }
 }
 
