--- a/css/projects.css
+++ b/css/projects.css
@@ -17,14 +17,22 @@ h2 {
     gap: 1em;
 }
 
+.col {
+    display: flex;
+    flex-direction: column;
+    width: 32%;
+    gap: 1em;
+}
+
 .project {
 
-    box-shadow: 0 4px 6px rgb(255 255 255 / 10%);
+    box-shadow: 0 4px 6px rgb(255 255 255 / 4%);
     display: flex;
     height: fit-content;
-    width: 32%;
+    width: 100%;
     flex-direction: column;
-    border: .1em solid var(--medium-gray);
+    /* border: .1em solid var(--medium-gray); */
+    border: .1em solid rgb(65 65 65);
     border-radius: .2em;
 
 }
@@ -41,68 +49,28 @@ h2 {
     width: 80%;
 }
 .project-body {
-    background: var(--dark-gray);
+    background: rgb(24 24 24);
+    /* background: var(--dark-gray); */
     padding: 1em;
-    box-shadow: inset 0px 5px 17px 3px #303030;
+    box-shadow: inset 0px 5px 17px 3px #1d1d1d;
 }
-.project:hover a, .project:hover .project-title {
-    box-shadow: inset 0px 5px 1em #303030;
+.project:hover > a, .project:hover .project-title {
+    /* box-shadow: inset 0px 5px 1em #303030; */
+}
+.project-site {
+    display: flex;
+    justify-content: start;
+    gap: 1em;
+    margin-bottom: .5em;
+}
+.project-site a {
+    width: revert;
 }
 
 #content a {
     color: var(--medium-gray);
 }
 
-table {
-    width: 100%;
-    height: 100%;
-}
-
-tr, th, td {
-    padding: .7em;
-}
-
-tbody {
-    font-size: .8em;
-}
-tbody tr td:first-child {
-    font-size: .3em;
-}
-thead tr th:first-child, tbody tr th {
-    text-align: left;
-}
-thead th {
-    padding-top: 0;
-}
-
-tbody tr:nth-of-type(odd) {
-    background: #313131;
-    /* background: rgb(62, 62, 62); */
-}
-
-
-.table-separator {
-    /* background: var(--noir-blue) !important; */
-    background: black !important;
-}
-.table-separator th {
-    font-size: initial;
-    border: 1px solid var(--dark-gray);
-}
-
-
-.incomplete {
-}
-
-tbody a {
-    font-style: italic;
-}
-
-tbody tr a::after {
-    content: " ↗";
-    height: 50%;
-    font-size: .5em;
-}
 
 @media screen and (max-width: 1000px) {
 
@@ -117,6 +85,12 @@ tbody tr a::after {
     }
 }
 @media screen and (max-width: 560px) {
+    #projects-container {
+        flex-direction: column;
+    }
+    .col {
+        width: 100%;
+    }
     .project-image {
         width: 80%;
     }
