--- a/css/post.css
+++ b/css/post.css
@@ -49,8 +49,8 @@
 }
 
 #posts-navigation {
-    margin-top: 2em;
     display: flex;
+    margin-bottom: 2em;
     justify-content: space-between;
     align-items: center;
 }
@@ -71,6 +71,7 @@
     /* position: sticky; */
     top: 0;
 }
+
 
 @media screen and (max-width: 650px) {
     #content {
