--- a/css/foundation.css
+++ b/css/foundation.css
@@ -72,10 +72,10 @@ button.tag {
 	padding: .3em .5em;
 	font-size: .7em;
 	border-radius: 5%;
-	background: var(--light-gray);
 	border: .1em solid var(--dark-gray);
 	border-radius: .2em;
-	color: black;
+	color: var(--white);
+	background: none;
 }
 
 h1,
