--- a/css/post.css
+++ b/css/post.css
@@ -20,9 +20,6 @@
 #post-metadata ul {
     padding-left: 0;
 }
-#post-navigation {
-    padding-left: 0;
-}
 #post-navigation li {
     list-style-type: none;
 }
@@ -46,6 +43,8 @@
     align-items: start;
     flex-direction: column;
     gap: 1.5em;
+    margin-top: 2em;
+    padding-left: 0;
 }
 
 #posts-navigation {
