--- a/css/formatting.css
+++ b/css/formatting.css
@@ -81,6 +81,7 @@ blockquote {
 .output figure {
     border: .1em solid var(--dark-gray);
     width: fit-content;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
