added functionality for navigating to previous/next post in post

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -49,6 +49,13 @@
 	font-weight: 550;
 }
 
+.disabled {
+	opacity: .5;
+	text-decoration: line-through;
+	user-select: none;
+	pointer-events: none;
+}
+
 
 html,
 body {
