--- a/css/formatting.css
+++ b/css/formatting.css
@@ -80,8 +80,8 @@ blockquote {
 }
 .output figure {
     border: .1em solid var(--dark-gray);
-    width: fit-content;
-    /* width: 100%; */
+    /* width: fit-content; */
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
