--- a/css/foundation.css
+++ b/css/foundation.css
@@ -32,7 +32,7 @@
 	box-sizing: border-box;
 }
 
-.safari :has(h1, h2, h3, h4, h5, h6) {
+.safari :is(h1, h2, h3, h4, h5, h6) {
 	font-weight: 550;
 }
 
