--- a/css/foundation.css
+++ b/css/foundation.css
@@ -51,6 +51,26 @@
 	pointer-events: none;
 }
 
+#message {
+	position: fixed;
+	/* bottom: 1em; */
+	right: 50%;
+	transform: translateX(50%);
+	background: var(--white);
+	border: .1em solid var(--dark-gray);
+	border-radius: .5em;
+	color: var(--dark-gray);
+	padding: .3em 1.5em;
+	box-shadow: 0px 5px 5px rgb(31, 31, 31);
+
+	transition: bottom .3s ease;
+
+	bottom: -2em;
+}
+#message.reveal-message {
+	bottom: 1em;
+}
+
 
 html,
 body {
@@ -119,10 +139,10 @@ pre[class*="language-"] {
 	user-select: none;
 	-moz-user-select: none;
 	-webkit-user-select: none;
+	cursor: default;
 }
 
 .clickable:hover {
-	cursor: default;
 	text-decoration: underline;
 	color: var(--white);
 }
