--- a/css/notes.css
+++ b/css/notes.css
@@ -2,6 +2,17 @@ ul {
     margin: 0;
 }
 
+#notes-navigation > ul {
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding-top: 2em;
+    /* header is 10vh so 90vh would be max screen */
+    max-height: 90vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+}
 #notes-navigation li {
     margin: 0 !important;
     list-style-type: none;
@@ -30,6 +41,16 @@ a {
     background: black;
     border-right: .1em solid var(--dark-gray);
     padding-left: 0;
+    position: relative;
+    padding-top: 0;
+
+    /* tried to make this position sticky
+    however the height of the it is 100% 
+    so it will not produce the sticky effect i wanted
+    - needed height 100% to get border line all the way down
+    as a result i did position sticky on the ul child element
+    instead which has height fit-content thus capable of sticking  
+     */
 }
 
 #notes-navigation-links-header {
