added overflow-y scroll to post.css to support mobile devices with smaller screens too

--- a/css/post.css
+++ b/css/post.css
@@ -15,6 +15,10 @@
 }
 #post-metadata {
     position: sticky;
+    /* for smaller screens make overflow-y scroll */
+    max-height: 90vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
     top: 2em;
 }
 #post-metadata ul {
