slight adjustment to projects columns spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -57,6 +57,7 @@ html, body {
 
     .projects-container {
         flex-direction: column;
+        gap: 1em;
     }
     .col {
         width: 100%;
